[package]
name = "florest"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.37"
wasm-bindgen = "0.2.60"
wavefront_obj = "10"
try-guard="0.2.0"
luminance = "0.46"
luminance-front = "0.6"
luminance-web-sys = "0.5.0"
luminance-webgl = "0.6.0"
luminance-derive = "0.9"
console_error_panic_hook = "*"
vek = "0.15.5"
bracket-noise = "0.8.2"

[dependencies.web-sys]
version = "0.3.39"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'CanvasRenderingContext2d',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]

[dependencies.getrandom]
features = ['js']


[profile.release]
lto = true
opt-level = 's'
