[package]
name = "florest"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "desktop"

[dependencies]
try-guard="0.2.0"
luminance = "0.46"
luminance-front = "0.6"
luminance-derive = "0.9"
vek = "0.15.5"
bracket-noise = "0.8.2"
serde = "1.0.136"
serde_json = "1.0.78"
icosahedron = "0.1"
image = "0.24"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glfw = "0.43"
luminance-glfw = "0.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.37"
wasm-bindgen = "0.2.60"
luminance-web-sys = "0.5"
console_error_panic_hook = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.39"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'CanvasRenderingContext2d',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
features = ['js']

[profile.release]
lto = true
opt-level = 's'
