[package]
name = "florest"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vek = "0.15.5"
bracket-noise = "0.8.2"
serde = "1.0.136"
serde_json = "1.0.78"
icosahedron = { path = "../icosahedron" }
glsmrs = { path = "../glsmrs" }
image = "0.24"
base64 = "0.13.0"
map_3d = "0.1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.37"
wasm-bindgen = "0.2.60"
console_error_panic_hook = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.56"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'CanvasRenderingContext2d',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
features = ['js']

[profile.release]
lto = true
opt-level = 's'
